[project]
name = "etiennebfx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dash>=3.0.4",
    "polars>=1.30.0",
    "plotly[express]>=6.1.2",
]

[dependency-groups]
dev = [
    "mypy>=1.16.0",
    "ruff>=0.11.12",
    "ty>=0.0.1a7",
]
